// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<button
  className="btn"
  data-testid="button"
  style={
    Object {
      "backgroundColor": "blue",
    }
  }
>
  save
</button>
`;

exports[`matches snapshot 2 1`] = `
<button
  className="btn"
  data-testid="button"
  style={
    Object {
      "backgroundColor": "blue",
    }
  }
>
  Hello
</button>
`;
